--- a/example.html
+++ b/example.html
@@ -2,6 +2,9 @@
 <html lang="en">
   <head>
     <title>Example page</title>
+    <style>
+      body { font-family: monospace; font-size: 1.5rem; }
+    </style>
     <script src="./dist/index.iife.js" defer></script>
   </head>
   <body>
