--- a/example.html
+++ b/example.html
@@ -8,7 +8,7 @@
     <script src="./dist/index.iife.js" defer></script>
   </head>
   <body>
-    <component-anatomy edit>
+    <component-anatomy edit orientation="vertical">
       <img src="https://picsum.photos/200/300"/>
     </component-anatomy>
   </body>
