--- a/example.html
+++ b/example.html
@@ -3,7 +3,8 @@
   <head>
     <title>Example page</title>
     <style>
-      body { font-family: monospace; font-size: 1.5rem; }
+      :root { --component-anatomy--pin-bg: blue; --component-anatomy--pin-hl: white; }
+      body { font-family: monospace; font-size: 1.5rem; text-align: center; }
     </style>
     <script src="./dist/index.iife.js" defer></script>
   </head>
