--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       :root { --component-anatomy--pin-bg: purple; --component-anatomy--pin-hl: yellow; }
       body { font-family: monospace; font-size: 1.5rem; text-align: center; }
     </style>
-    <script src="./dist/index.iife.js" defer></script>
+    <script src="dist/index.iife.js" defer></script>
   </head>
   <body>
     <component-anatomy edit orientation="vertical">
