Add negative tabindex to hidden input

--- a/src/template.html
+++ b/src/template.html
@@ -4,5 +4,5 @@
       <ol id="pins"></ol>
     </figure>
     <ol id="list"></ol>
-    <input id="copy"/>
+    <input id="copy" tabindex="-1"/>
   </div>
